fix: nav spacing on desktop

--- a/src/routes/Layout.scss
+++ b/src/routes/Layout.scss
@@ -51,6 +51,7 @@ header {
       width: auto;
       flex-direction: row;
       box-shadow: none;
+      padding: 0;
     }
 
     a {
